# Terminal

./: .gitignore  .pre-commit-config.yaml  Makefile  README.md  huy  main.py  mypy.ini  pyproject.toml
.github/workflows/: ci.yml
.guthub/workflows/: ci.yml
logger/: logger.py  setup.py
parser/: parser.py  setup.py
src/: baseclass.py  errors.py  main.py  power.py
src/archive/: .history  history.py  tar.py  untar.py  unzip.py  zip.py
src/commands/: base_command.py  cat.py  cd.py  cp.py  ls.py  mv.py  rm.py
src/file_commands/: base_command.py  cat.py  cd.py  cp.py  ls.py  mk.py  mkdir.py  mv.py  rm.py  touch.py
src/filesystem/: base_command.py  cat.py  cd.py  cp.py  ls.py  mkdir.py  mv.py  rm.py  touch.py
src/grep/: grep.py
src/history/: .history  .undo_history  history.py  undo.py
src/history/.trash/: jdjasjkdjad adjasjdjasdjasd hjdjjadjad
src/utils/: errors.py  logger.py  parser.py
tests/: conftest.py
tests/tests_archive/: tess_zip.py  test_tar.py  test_untar.py  test_unzip.py  test_zip.py
tests/tests_filesystem/: test_base_command.py  test_cat.py  test_cd.py  test_cp.py  test_ls.py  test_mkdir.py  test_mv.py  test_rm.py  test_touch.py
tests/tests_grep/: test_grep.py
tests/tests_history/: test_history.py  test_undo.py
tests/tests_utils/: test_logger.py  test_parser.py
