[project]
name = "labs"
version = "0.1.0"
description = "Mini File Manager"
requires-python = ">=3.12"
dependencies = [
    "logging>=0.4.9.6",
    "mypy>=1.18.2",
    "pre-commit>=4.3.0",
    "ruff>=0.14.1",
]

[dependency-groups]
dev = [
    "mypy>=1.18.2",
    "pytest>=8.4.2",
    "ruff>=0.14.1",
    "pre-commit>=4.3.0",
]

[tool.ruff]
line-length = 79
target-version = 'py312'

[tool.ruff.lint]
fixable = ['ALL']
select = ['E', 'F', 'I', 'B']

[tool.mypy]
python_version = '3.12'
disallow_untyped_defs = true
ignore_missing_imports = true
strict_optional = true
